# observlib-rs

./: Cargo.toml  flake.nix
src/: errors.rs  lib.rs  main.rs  metrics.rs
src/lib/: logs.rs  metrics.rs  mod.rs  traces.rs
tests/: async_test.rs  basic_test.rs
